AspNetApi/charts/aspnetapi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aspnetapi-pod
  labels:
    app: aspnetapi
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: aspnetapi-app
  template:
    metadata: 
      labels:
        app: aspnetapi-app
    spec:
      containers:
        - name: aspnetapi
          image: aspnetapi:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
