AspNetApi/charts/aspnetapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aspnetapi
spec:
  type: NodePort
  selector:
    app: aspnetapi-app
  ports:
    - name: http
      port: 80
      targetPort: 80
